Remove some warning code